# perplexipy

./: .gitignore  LICENSE  LICENSE.txt  Makefile  PerplexiPy-tutorial.ipynb  README.md  codex-README.md  dev-tools.txt  package.txt  pyproject.toml  requirements.txt
docs/: index.html  perplexipy.html  search.js
docs/perplexipy/: coddex-WIP.html  codex.html  errors.html  responses.html
perplexipy/: __init__.py  coddex-WIP.py  codex.py  core.py  errors.py  responses.py
tests/: codex-test.py  errors-test.py  perplexipy-test.py  responses-test.py
