# See: https://github.com/CIME-Software/perplexipy/blob/master/LICENSE.txt

[build-system]
requires = [ 'setuptools' ]
build-backend = 'setuptools.build_meta'


[metadata]
url = 'https://github.com/CIME-Software/perplexipy'


[project]
authors = [
    { name = 'CIME Software Ltd', email = 'perplexipy@cime.net' }
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
description = 'PerplexiPy - A robust Perplexity AI API client'
dynamic = [
    'dependencies',
]
license = { text='BSD-3' }
name = 'PerplexiPy'
readme = 'README.md'
requires-python = '>=3.9'
version = '1.0.3'


[project.scripts]
codex = 'perplexipy.codex:codex'


[project.urls]
homepage = 'https://cime-software.github.io/perplexipy/'
Documentation = 'https://cime-software.github.io/perplexipy/'
'Bug Tracker' = 'https://github.com/CIME-Software/perplexipy/issues'
Source = 'https://github.com/CIME-Software/perplexipy'


[tool.pytest.ini_options]
addopts = '-sv'
testpaths = [
    'tests'
]


[tool.setuptools]
include-package-data = true
packages = [
    'perplexipy',
    # 'tests', # because test modules import objects from other test modules
]

[tool.setuptools.dynamic]
dependencies = { file = 'requirements.txt' }

